--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,12 @@ layout: default
     {%- for post in site.posts -%}
     <li>
       {%- assign date_format = "%Y-%m-%d" -%}
-      [ {{ post.date | date: date_format }} ] <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+      [ {{ post.date | date: date_format }} ] 
+      <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+      {% if post.subtitle %}
+        <br />
+        <small><em> -- {{ post.subtitle | escape }}</em></small>
+      {% endif %}
     </li>
     {%- endfor -%}
   </ul>
