--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -3,12 +3,12 @@
 /**
  * Style variables
  */
-$base-font-family:     'Source Code Pro', monospace !default;
-$base-font-size:       25px !default;
-$mobile-font-size:     24px !default;
+$base-font-family:     'D2Coding', monospace !default;
+$base-font-size:       16px !default;
+$mobile-font-size:     16px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
-$container-max-width:  1200px !default;
+$container-max-width:  800px !default;
 
 /**
  * Global
