--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,11 +10,11 @@ layout: default
     {%- for post in site.posts -%}
     <li>
       {%- assign date_format = "%Y-%m-%d" -%}
-      [{{ post.date | date: date_format }}]
+      [ {{ post.date | date: date_format }} ] 
       <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
       {% if post.subtitle %}
         <br />
-        <small><em><p style='line-height:2em'>  -{{ post.subtitle | escape }}</p></em></small>
+        <small><em><p style='line-height:2em'>  --{{ post.subtitle | escape }}</p></em></small>
       {% endif %}
     </li>
     {%- endfor -%}
