--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
+<html lang="{{ page.lang | default: site.lang | default: 'ko' }}">
 {%- comment -%}
   Build a practical CSP. It remains strict by default while allowing
   common use cases like external images and Google Fonts.
