--- a/_sass/_nord.scss
+++ b/_sass/_nord.scss
@@ -10,6 +10,7 @@
     --selection-text: #434C5E;
     --background-color: #2E3440;
     --text-color: var(--base-color);
+    --menu-color: var(--code-color-15);
     --placeholder-color: var(--base-color);
     --link-color: var(--base-color);
     --code-color-1: #aaaaaa;
