--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,16 +5,16 @@ layout: default
 {{ content }}
 {% assign contentwonl = content | strip_newlines %} {% unless contentwonl == ""  %} <br /> {% endunless %} <!-- add line break if there is any content -->
 
-{%- if site.posts.size > 0 -%}
-  <ul>
-    {%- for post in site.posts -%}
-    <li>
+{%- if site.diary.size > 0 -%}
+  <ul class="diary-list">
+    {%- for post in site.diary -%}
+    <li class="diary-item">
       {%- assign date_format = "%Y-%m-%d" -%}
-      [ {{ post.date | date: date_format }} ] 
+      [{{ post.date | date: date_format }}]
       <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
       {% if post.subtitle %}
         <br />
-        <small><em><p style='line-height:2em'>  --{{ post.subtitle | escape }}</p></em></small>
+        <small><em><p style='line-height:2em'>  -  {{ post.subtitle | escape }}</p></em></small>
       {% endif %}
     </li>
     {%- endfor -%}
