--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,12 +9,10 @@ layout: default
   <ul>
     {%- for post in site.posts -%}
     <li>
-      {%- assign date_format = "%Y-%m-%d" -%}
-      [{{ post.date | date: date_format }}]
       <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
       {% if post.subtitle %}
         <br />
-        <small><em><p style='line-height:2em'>  -  {{ post.subtitle | escape }}</p></em></small>
+        <small><em><p style='line-height:2em'>{{ post.subtitle | escape }}</p></em></small>
       {% endif %}
     </li>
     {%- endfor -%}
