--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,8 +5,8 @@
  * Style variables
  */
 $base-font-family:     'JetBrains Mono Hangul', monospace !default;
-$base-font-size:       16px !default;
-$mobile-font-size:     16px !default;
+$base-font-size:       15px !default;
+$mobile-font-size:     12px !default;
 $base-line-height:     1.5 !default;
 $container-width:      90% !default;
 $container-max-width:  750px !default;
@@ -59,6 +59,7 @@ footer { margin-bottom: 20px; }
 :not(.menu) > ul { list-style: none;  padding-left: 0; }
 :not(.menu) > ul { list-style-type: none; }
 :not(.menu) > ul > li:before { content: "-";  margin-right: 9px; }
+:not(.menu) > ul > li > a { text-decoration: none; }
 
 /**
  * Header/Navigation
@@ -160,8 +161,29 @@ h1, h2 {
     color: #FFB86C;
   }
 
+  .post-title {
+    font-size: 2em !important;
+  }
+
+  .post-subtitle {
+    color: #bd93f9 !important;
+    margin-top: 0.5em !important;
+  }
+
+  .post-subtitle::before {
+    content: ">>";
+    color: var(--text-color) !important;
+    margin-right: 0.5em;
+  }
+
+  .post{
+    margin-bottom: 1.2%;
+    padding-bottom: 0.8em;
+    border-bottom: var(--border);
+  }
+
   blockquote {
-    color: #6272A4; /* Comment */
+    color: #6272A4;
     border-left: 4px solid #6272A4;
     padding-left: 1em;
     margin-left: 0;
@@ -190,6 +212,9 @@ h1, h2 {
     margin: 2em 0;
   }
 
+  .post-date{
+    color: var(--code-color-15);
+  }
   .post-nav {
     display: flex !important;
     justify-content: space-between !important;
@@ -201,6 +226,13 @@ h1, h2 {
     text-align: inherit !important;
     flex: 1 !important;
     min-width: 0 !important;
+    overflow: hidden !important;
+  }
+  
+  .post-nav div a {
+    display: block !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
   }
   
   .post-nav div:last-child {
@@ -225,4 +257,41 @@ h1, h2 {
   width: auto !important;
   padding: 0 !important;
   margin: 0 !important;
+}
+
+/* 모바일 */
+@media only screen and (max-device-width: 500px) {
+  .post-nav {
+    font-size: 0.8em !important;
+  }
+  
+  .post-nav div {
+    margin-left: 0.3em !important;
+    margin-right: 0.3em !important;
+    max-width: 48% !important;
+  }
+  
+  .post-nav div:last-child {
+    margin-left: 0.3em !important;
+  }
+  
+  .post-nav div:first-child {
+    margin-right: 0.3em !important;
+  }
+  
+  .post-nav strong {
+    font-size: 0.9em !important;
+    display: block !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+  }
+  
+  .post-nav small {
+    font-size: 0.75em !important;
+    display: block !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+  }
 }
