--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <header>
   <div class="menu">
     <ul>
-      <h2> >> F5d4ddy</h2>
+      <h2> >> F5boy</h2>
       {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- if my_page.title -%}
