--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,12 @@
   <meta name="robots" content="{{page.robots}}" />
   {% endif %}
 
+  <link rel="icon" type="image/png" href="{{site.baseurl}}/assets/images/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="{{site.baseurl}}/assets/images/favicon.svg" />
+  <link rel="shortcut icon" href="{{site.baseurl}}/assets/images/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{site.baseurl}}/assets/images/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="{{site.baseurl}}/assets/images/site.webmanifest" />
 
   {%- if site.listen_for_clients_preferred_style -%}
   <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}">
